--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Kaizen V1</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -56,7 +56,8 @@
     </div>
   </div>
 
-  <script src="CONFIG.js"></script>
+  <script src="config.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
+      
