--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
     </div>
   </div>
 
-  <script src="config.js"></script>
-  <script src="app.js"></script>
+  <!-- Load configuration and main app scripts -->
+<script src="config.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
       
